Fix whitespace below sidetopp__tittel

--- a/styles/_sidetopp.less
+++ b/styles/_sidetopp.less
@@ -1,7 +1,7 @@
 .sidetopp__tittel {
     text-align: center;
     margin-top: 0;
-    margin-bottom: 2em;
+    margin-bottom: 2rem;
     .typo-sidetittel-mixin();
 }
 
